@@ -22,6 +22,7 @@ Minor features
  * Added ``Page`` methods ``can_exist_under``, ``can_create_at``, ``can_move_to`` for customising page type business rules
  * ``wagtailadmin.utils.send_mail`` now passes extra keyword arguments to Django's ``send_mail`` function (Matthew Downey)
  * ``page_unpublish`` signal is now fired for each page that was unpublished by a call to ``PageQuerySet.unpublish()``
+ * Add `get_upload_to` method to `AbstractImage`, to allow overriding the default image upload path (Ben Emery)
 
 
 Bug fixes
